--- a/src/App.css
+++ b/src/App.css
@@ -6,11 +6,28 @@
   background-size: cover;
 }
 
-/* img{
-  height: 100%;
-} */
-
 .react-quiz-container {
   margin: 7em 0em;
 }
+.question-wrapper {
+  background-color: #FEF0F9;
+  width: 50%;
+  margin: auto;
+  padding: 1em;
+  border-radius: 2em;
+  border-style: solid;
+  border-color: #DF69D0;
+  border-width: 5px;
+}
 
+
+.next button{
+  background-color: #FFBFC7;
+  width: 25%;
+  border-radius: 1em;
+  padding: 0.5em;
+  margin: 2em;
+}
+.next button:hover {
+  background-color: #FF949F;
+}
